--- a/SnowboardCourses/src/main/resources/application.properties
+++ b/SnowboardCourses/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 course.maxGroupCount=2
 group.maxPersonPerGroup=2
+
+exception.personNotFound=There wasn't found person with id = 
+exception.courseNotFound=There wasn't found course with id = 
