--- a/SnowboardCourses/src/main/resources/application.properties
+++ b/SnowboardCourses/src/main/resources/application.properties
@@ -5,3 +5,9 @@ group.maxPersonPerGroup=2
 
 async.corePoolSize=4
 async.maxPoolSize=8
+
+#database
+datasource.driver=org.postgresql.Driver
+datasource.ulr=jdbc:postgresql://localhost:5432/test
+datasource.username=postgres
+datasource.password=postgres
