--- a/SnowboardCourses/pom.xml
+++ b/SnowboardCourses/pom.xml
@@ -101,6 +101,11 @@
             <version>5.2.9.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>4.1.1</version>
