--- a/SnowboardCourses/src/main/resources/application.properties
+++ b/SnowboardCourses/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+system.id=snowboard-courses
+
 course.maxGroupCount=2
 group.maxPersonPerGroup=2
 
-exception.personNotFound=There wasn't found person with id = 
-exception.courseNotFound=There wasn't found course with id = 
+async.corePoolSize=4
+async.maxPoolSize=8
