--- a/SnowboardCourses/src/main/resources/exception_messages.properties
+++ b/SnowboardCourses/src/main/resources/exception_messages.properties
@@ -1,2 +1,2 @@
-exception.personNotFound=There wasn't found person with id = 
+exception.personNotFound=There wasn't found person with 
 exception.courseNotFound=There wasn't found course with id = 
