--- a/SnowboardCourses/src/main/resources/application.yml
+++ b/SnowboardCourses/src/main/resources/application.yml
@@ -25,12 +25,26 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/changelog-master.xml
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+    properties:
+      hibernate.temp.use_jdbc_metadata_defaults: false
+    show-sql: false
+    hibernate:
+      hbm2ddl:
+        auto: none
+      default_schema: public
+      use_sql_comments: true
+      format_sql: true
 
 logging:
   level:
     ROOT: INFO
     ru.iteco: DEBUG
     org.springframework: INFO
+    org.hibernate:
+      SQL: DEBUG
+      type.descriptor.sql.BasicBinder: TRACE
 
 management:
   endpoints:
