--- a/SnowboardCourses/snowboard-courses-impl/src/main/resources/application-local.yml
+++ b/SnowboardCourses/snowboard-courses-impl/src/main/resources/application-local.yml
@@ -1,3 +1,6 @@
+server:
+  port: ${APP_PORT:8080}
+
 spring:
   config:
     use-legacy-processing: true
@@ -8,9 +11,10 @@ spring:
 logging:
   level:
     ROOT: INFO
-    ru.iteco: DEBUG
+    ru.tsedrik: DEBUG
     org.springframework: INFO
-    ru.iteco.aspect: DEBUG
+    org.springframework.security: DEBUG
+    ru.tsedrik.aspect: DEBUG
   appenders:
     console:
       enabled: true
