--- a/SnowboardCourses/snowboard-courses-impl/src/main/resources/application.yml
+++ b/SnowboardCourses/snowboard-courses-impl/src/main/resources/application.yml
@@ -77,3 +77,6 @@ scheduling:
   cron:
     enabled: true
     expression: "0 0 01 * * *"
+
+forecast-service:
+  url: "http://localhost:8082/publisher/remoting/forecastService"
