--- a/SnowboardCourses/snowboard-courses-impl/pom.xml
+++ b/SnowboardCourses/snowboard-courses-impl/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>snowboard-courses-auth-validate</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ru.tsedrik</groupId>
+            <artifactId>invoker-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
