--- a/SnowboardCourses/feign-api/pom.xml
+++ b/SnowboardCourses/feign-api/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>ru.tsedrik</groupId>
-    <artifactId>invoker-api</artifactId>
+    <artifactId>feign-api</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -22,6 +22,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <dependencies></dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
