--- a/SnowboardCourses/pom.xml
+++ b/SnowboardCourses/pom.xml
@@ -16,7 +16,7 @@
         <module>snowboard-courses-auth-api</module>
         <module>snowboard-courses-auth-impl</module>
         <module>snowboard-courses-auth-validate</module>
-        <module>invoker-api</module>
+        <module>feign-api</module>
         <module>publisher</module>
     </modules>
 
