--- a/SnowboardCourses/snowboard-courses-api/pom.xml
+++ b/SnowboardCourses/snowboard-courses-api/pom.xml
@@ -26,7 +26,7 @@
 
         <dependency>
             <groupId>ru.tsedrik</groupId>
-            <artifactId>invoker-api</artifactId>
+            <artifactId>feign-api</artifactId>
             <version>${project.version}</version>
         </dependency>
 
