--- a/SnowboardCourses/docker/docker-compose.yml
+++ b/SnowboardCourses/docker/docker-compose.yml
@@ -16,3 +16,15 @@ services:
     ports:
       - "61616:61616" # broker (admin:adminactivemq)(amq:amq)
       - "8161:8161"   # web    http://boot2docker:8161/admin (admin:admin)
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka
+    build: .
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
