Вынесение классов для токен-аутентификации в отдельный модуль

--- a/SnowboardCourses/pom.xml
+++ b/SnowboardCourses/pom.xml
@@ -15,6 +15,7 @@
         <module>snowboard-courses-audit</module>
         <module>snowboard-courses-auth-api</module>
         <module>snowboard-courses-auth-impl</module>
+        <module>snowboard-courses-auth-token</module>
         <module>snowboard-courses-auth-validate</module>
     </modules>
 
