--- a/SnowboardCourses/snowboard-courses-api/pom.xml
+++ b/SnowboardCourses/snowboard-courses-api/pom.xml
@@ -26,7 +26,7 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-webflux</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
